--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,3 +19,11 @@ header {
     float: right;
   }
   
+  .test {
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    width: 50%;
+    border: 3px solid green;
+    padding: 10px;
+  }
