--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,13 +6,13 @@ header {
     text-align: left;
   }
   
-  .left {
+  .highScores {
     display: inline;
     list-style-type: none;
     font-size: 20px;
   }
   
-  .right {
+  .timer {
     display: inline;
     list-style-type: none;
     font-size: 20px;
@@ -24,6 +24,5 @@ header {
     margin: auto;
     justify-content: center;
     width: 50%;
-    border: 3px solid green;
     padding: 10px;
   }
