--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,44 +1,84 @@
 header {
-    width: 100%;
-  }
-  
+  width: 100%;
+}
+
 h2 {
-    text-align: left;
-  }
-  
+  text-align: left;
+}
+
 .highScores {
-    display: inline;
-    list-style-type: none;
-    font-size: 20px;
-  }
-  
+  display: inline;
+  list-style-type: none;
+  font-size: 20px;
+  float:inline-start;
+}
+
 .timer {
-    display: inline;
-    list-style-type: none;
-    font-size: 20px;
-    float: right;
-  }
-  
-#test {
-    display: flex;
-    margin: auto;
-    align-items: center;
-    justify-content: center;
-    width: 100px;
-    padding-top: 100px;
-    flex-flow: column;
-  }
-  
-.questions {
-    height: 40px;
-    cursor: pointer;
-    background-color: #ff7034;
-    color: #000000;
-    font-size: 1em;
-    border: 1px solid #eceff1;
-    border-radius: 8px;
-    box-shadow: rgba(60, 64, 67, 2) 0 1px 2px 0,
-      rgba(60, 64, 67, 0.15) 0 2px 4px 3px;
-    width: 80vw;
-    margin-top: 20px
-  }
+  display: inline;
+  list-style-type: none;
+  font-size: 20px;
+  float:inline-end;
+}
+
+body{
+	font-size: 20px;
+	font-family: 'Work Sans', sans-serif;
+	color: #333;
+  font-weight: 300;
+  text-align: center;
+  background-color: #f8f6f0;
+}
+h1{
+  font-weight: 300;
+  margin: 0px;
+  padding: 10px;
+  font-size: 20px;
+  background-color: #444;
+  color: #fff;
+}
+.question{
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+.answers {
+  margin-bottom: 20px;
+  text-align: left;
+  display: inline-block;
+}
+.answers label{
+  display: block;
+  margin-bottom: 10px;
+}
+button{
+  font-family: 'Work Sans', sans-serif;
+	font-size: 22px;
+	background-color: #279;
+	color: #fff;
+	border: 0px;
+	border-radius: 3px;
+	padding: 20px;
+	cursor: pointer;
+	margin-bottom: 20px;
+}
+button:hover{
+	background-color: #38a;
+}
+
+.slide{
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+.active-slide{
+  opacity: 1;
+  z-index: 2;
+}
+.quiz-container{
+  position: relative;
+  height: 200px;
+  margin-top: 40px;
+}
