--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,3 +87,15 @@ button:hover{
   margin-top: 40px;
   margin-bottom: 40px;
 }
+
+#previous {
+  display:none;
+}
+
+#next {
+  display:none;
+}
+
+#submit {
+  display:none;
+}
