removed line from high score link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,3 +99,22 @@ button:hover{
 #submit {
   display:none;
 }
+
+a:link { 
+  text-decoration: none; 
+}
+
+
+a:visited { 
+  text-decoration: none; 
+}
+
+
+a:hover { 
+  text-decoration: none; 
+}
+
+
+a:active { 
+  text-decoration: none; 
+}
