high scores kind of works

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body{
   background-color: #f8f6f0;
 }
 
-.highScores {
+#highScores {
   display: inline;
   list-style-type: none;
   font-size: 20px;
@@ -53,7 +53,7 @@ h1{
   display: block;
   margin-bottom: 10px;
 }
-button{
+#previous, #next, #submit, #startQuiz{
   font-family: 'Work Sans', sans-serif;
 	font-size: 22px;
 	background-color: #279;
@@ -64,7 +64,7 @@ button{
 	cursor: pointer;
 	margin-bottom: 20px;
 }
-button:hover{
+#previous, #next, #submit :hover{
 	background-color: #38a;
 }
 
@@ -129,4 +129,72 @@ a:active {
 	padding: 4px;
 	cursor: pointer;
 	margin-bottom: 20px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  background-color: white;
+}
+
+li {
+  height: 50px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 5px;
+  background-color:  #001b44;
+  color: white;
+  font-size: 1.5em;
+  line-height: 1.5;
+}
+
+li:before {
+  content: "\200B";
+  position: absolute;
+}
+
+li::after {
+  content: " ";
+  display: block;
+  clear: both;
+}
+
+li button {
+  float: right;
+  border: none;
+  height: 40px;
+  cursor: pointer;
+  background-color: #ff7034;
+  color: white;
+  font-size: 1em;
+}
+
+#card {
+  background-color:	#FFFFE0;
+  border: 1px solid #eceff1;
+  border-radius: 8px;
+  box-shadow: rgba(60, 64, 67, 2) 0 1px 2px 0,
+    rgba(60, 64, 67, 0.15) 0 2px 4px 3px;
+  margin: 60px auto;
+  padding: 20px;
+  width: 80vw;
+  display:block;
+  visibility: hidden;
+}
+
+#card.active {
+  background-color:	#FFFFE0;
+  border: 1px solid #eceff1;
+  border-radius: 8px;
+  box-shadow: rgba(60, 64, 67, 2) 0 1px 2px 0,
+    rgba(60, 64, 67, 0.15) 0 2px 4px 3px;
+  margin: 60px auto;
+  padding: 20px;
+  width: 80vw;
+  display:block;
+}
+
+
+#initials {
+  display:none;
 }
